--- a/FtcDashboard/build.gradle
+++ b/FtcDashboard/build.gradle
@@ -27,6 +27,8 @@ android {
     lintOptions {
         abortOnError false
     }
+
+    namespace = "com.acmerobotics.dashboard"
 }
 
 node {
@@ -142,7 +144,7 @@ def addPomDependencies(root) {
 }
 
 task androidSourcesJar(type: Jar) {
-    classifier = "sources"
+    archiveClassifier = "sources"
     from android.sourceSets.main.java.srcDirs
 }
 
@@ -154,7 +156,7 @@ task androidJavadocs(type: Javadoc) {
 }
 
 task androidJavadocsJar(type: Jar, dependsOn: androidJavadocs) {
-    classifier = "javadoc"
+    archiveClassifier = "javadoc"
     from androidJavadocs.destinationDir
 }
 
